--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nerdcast-rpg-info",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "url": "https://github.com/fleflis/nerdcast-rpg-info"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
